# UC3

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  check_skills_and_bt.py  cxml  frames_2025-08-29_17.54.05.gv  frames_2025-08-29_18.01.05.gv  frames_2025-09-01_20.23.27.gv  generate_all_skills.sh  merge_bt_files.py
conf/: artwork_coords.json  (+5 more)
laboratory-tour/src/behavior_tree/bt_executable_reload/: CMakeLists.txt  package.xml
laboratory-tour/src/behavior_tree/bt_executable_reload/src/: main.cpp
laboratory-tour/src/behavior_tree/bt_nodes/: CMakeLists.txt  package.xml
laboratory-tour/src/behavior_tree/bt_nodes/include/: ROS2Action.h  ROS2Condition.h
laboratory-tour/src/behavior_tree/bt_nodes/src/: ROS2Action.cpp  ROS2Condition.cpp  ROS2Node.cpp
laboratory-tour/src/components/dialog_component/: CMakeLists.txt  package.xml
laboratory-tour/src/components/dialog_component/config/: config.ini
laboratory-tour/src/components/dialog_component/include/: Action.h  DialogComponent.hpp  SpeakerStatusCallback.hpp  SpeechTranscriberCallback.hpp  TourStorage.h
laboratory-tour/src/components/dialog_component/src/: .DialogComponent.cpp.swp  DialogComponent.cpp  main.cpp
laboratory-tour/src/components/dialog_component/test/: yri_googleDialog.xml  yri_googleSynth.xml  yri_server.xml
laboratory-tour/src/components/scheduler_component/: CMakeLists.txt  package.xml
laboratory-tour/src/components/scheduler_component/include/: Poi.h  SchedulerComponent.h  Tour.h  TourStorage.h
laboratory-tour/src/components/scheduler_component/src/: Poi.cpp  SchedulerComponent.cpp  Tour.cpp
laboratory-tour/src/uc3_launch/: CMakeLists.txt  package.xml
laboratory-tour/src/uc3_launch/conf/: tours.json
laboratory-tour/src/uc3_launch/conf/BT/: CMakeLists.txt  bt_convince v1.xml  bt_convince.xml  bt_failure_management.xml  scope_example.xml
laboratory-tour/src/uc3_launch/launch/: bt_executable.launch.py  bt_robot.launch.py  dummy_skill.launch.py  scheduler_component.launch.py
laboratory-tour/src/uc3_launch/launch/support_code/: skillExeNameExtractor.py
model-high-level/interfaces/dialog_interfaces/: CMakeLists.txt
model-high-level/interfaces/dialog_interfaces/action/: Speak.action  WaitForInteraction.action
model-high-level/interfaces/dialog_interfaces/srv/: InterpretCommand.srv  IsSpeaking.srv  ManageContext.srv  OfflineSpeak.srv  SetWebStatus.srv  ShortenAndSpeak.srv
model-high-level/interfaces/text_to_speech_interfaces/: CMakeLists.txt  package.xml
parser-and-code-generator/: CMakeLists.txt  README.md  main.cpp  scxmlgen
parser-and-code-generator/specifications/: full-model.xml  interfaces.xml
ros2_bag_cpp_recorder/: CMakeLists.txt  package.xml
ros2_bag_cpp_recorder/src/: bag_recorder_node.cpp
simple-example/src/skills/alarm_battery_low_skill/: CMakeLists.txt
simple-example/src/skills/alarm_battery_low_skill/include/: AlarmBatteryLowSkill.h
simple-example/src/skills/alarm_battery_low_skill/src/: AlarmBatteryLowSM.scxml  AlarmBatteryLowSkill.cpp
src/behavior_tree/bt_executable/: CMakeLists.txt  package.xml
src/behavior_tree/bt_executable/src/: main.cpp
src/behavior_tree/bt_executable_reload/: CMakeLists.txt  package.xml
src/behavior_tree/bt_executable_reload/src/: main.cpp
src/components/allowed_to_move_component/: CMakeLists.txt  package.xml
src/components/allowed_to_move_component/src/: AllowedToMoveComponent.cpp
src/components/cartesian_pointing_component/: CMakeLists.txt  README.md  package.xml
src/components/cartesian_pointing_component/include/: CartesianPointingComponent.h
src/components/cartesian_pointing_component/src/: CartesianPointingComponent.cpp  main.cpp
src/components/execute_dance_component/: CMakeLists.txt  package.xml
src/components/execute_dance_component/include/: ExecuteDanceComponent.h
src/components/execute_dance_component/src/: ExecuteDanceComponent.cpp  main.cpp
src/components/planner_component/: package.xml  setup.cfg  setup.py
src/components/planner_component/planner_component/: DetectionsRetriever.py  PlannerComponent.py
src/components/planner_component/resource/: configuration.yaml  configuration45.yaml
src/components/planner_component/resource/MoDs/: map_madama3_september.csv
src/components/planner_component/resource/occupancy_maps_madama3_doors_16_experiments/: occupancy_map_madama3_doors_16_experiments_5_levels-topological.yaml  occupancy_map_madama3_doors_16_experiments_5_levels.yaml  (+1 more)
src/components/point_cloud_component/: CMakeLists.txt  README.md  package.xml
src/components/point_cloud_component/include/: CameraSafetyComponent.h  PointCloudComponent.h
src/components/point_cloud_component/src/: CameraSafetyComponent.cpp  PointCloudComponent.cpp  main.cpp
src/interfaces/cartesian_pointing_interfaces/: CMakeLists.txt  package.xml
src/interfaces/cartesian_pointing_interfaces/srv/: IsMotionDone.srv  IsPointing.srv  PointAt.srv
src/modules/gazebo_person_simulator/: CMakeLists.txt  package.xml
src/modules/gazebo_person_simulator/include/: gazebo_person_simulator.hpp
src/modules/gazebo_person_simulator/resource/: persons.yaml
src/modules/gazebo_person_simulator/src/: gazebo_person_simulator.cpp  main.cpp
src/modules/network_management_from_monitor/: CMakeLists.txt  package.xml
src/modules/network_management_from_monitor/src/: network_management_from_monitor.cpp
src/skills/battery_charging_skill/: CMakeLists.txt  package.xml
src/skills/battery_charging_skill/include/: BatteryChargingSkill.h  BatteryChargingSkillDataModel.h
src/skills/battery_charging_skill/src/: BatteryChargingSkill.cpp  BatteryChargingSkillDataModel.cpp  BatteryChargingSkillSM.scxml  main.cpp
src/skills/notify_charged_skill/: CMakeLists.txt  package.xml
src/skills/notify_charged_skill/include/: NotifyChargedSkill.h
src/skills/notify_charged_skill/src/: NotifyChargedSkill.cpp  NotifyChargedSkillSM.scxml  main.cpp
template_skill/: CMakeLists.txt  package.xml
template_skill/include/: TemplateSkill.h  TemplateSkillDataModel.h
template_skill/src/: TemplateSkill.cpp  TemplateSkillDataModel.cpp  main.cpp
(+2147 files in other folders)
