<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>$projectName$</name>
  <version>0.0.0</version>
  <description>Package description</description>
  <maintainer email="your@email.it"></maintainer>
  <license>License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!--TICK--><depend>bt_interfaces_dummy</depend><!--END_TICK-->
  <!--INTERFACE_LIST--><!--INTERFACE-->
  <depend>$interfaceName$</depend><!--END_INTERFACE-->
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
