<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>text_to_speech_interfaces</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="simone.micheletti@iit.it">Simone Micheletti</maintainer>
  <license>TODO: License declaration</license>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
