<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bt_executable_reload</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="stefano.bernagozzi@iit.it">Stefano Bernagozzi</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>bt_nodes</build_depend>
  <build_depend>bt_interfaces_dummy</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>