<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cartesian_pointing_component</name>
  <version>0.0.0</version>
  <description>ROS 2 node that performs Cartesian pointing using YARP Cartesian controllers.</description>

  <maintainer email="beniamino.squitieri@iit.it">Beniamino Squitieri</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Interfaces -->
  <depend>dance_interfaces</depend>
  <depend>cartesian_pointing_interfaces</depend>
  <depend>execute_dance_interfaces</depend>

  <!-- YARP & Eigen & nlohmann -->
  <depend>yarp</depend>
  <depend>eigen</depend>
  <depend>nlohmann_json</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
