<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planner_component</name>
  <version>0.0.0</version>
  <description>planner component for the UC3 of the convince project</description>
  <maintainer email="stefano.bernagozzi@iit.it">ste</maintainer>
  <license>Apache-2.0</license>
  <depend>planner_interfaces</depend>
  <depend>action_msgs</depend>
  <depend>rclpy</depend>
  <depend>blackboard_interfaces</depend>
  <depend>static_devices_msgs</depend>
  <depend>std_srvs</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>



  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
